syntax = "proto3";

package acton.predictors;

/**
 * Key/value pair.
 */
message KeyVal {
    string key = 1;
    string value = 2;
}

/**
 * Input to predictors.
 */
message IDs {
    /**
     * A list of IDs for a database.
     *
     * Intended to be used as input to predictors.
     */

    // IDs.
    repeated int64 id = 1;

    // Path to database.
    string db_path = 2;

    // Class of database.
    string db_class = 3;

    // Keyword arguments to pass to the database constructor.
    repeated KeyVal db_kwargs = 4;
}

/**
 * Output of predictors.
 */
message Predictions {
    /**
     * Predictions for a single instance.
     */
    message Prediction {
        // The ID of the instance that we are predicting.
        int64 id = 1;

        // Predictions are a T x D array, where
        // - T is the number of predictors, and
        // - D is the dimensionality of the prediction.
        repeated double prediction = 2;
    }

    // Predictions for instances.
    repeated Prediction prediction = 1;
    
    // By having the data type and shape of the predictions outside the
    // Prediction itself, we force all predictions to be the same shape, but
    // also save space.

    // Number of predictors.
    int32 n_predictors = 2;

    // Dimensionality of the predictions.
    int32 n_prediction_dimensions = 3;

    // Type of the predictions.
    string dtype = 4;

    // Predictor used to generate these predictions.
    string predictor = 5;

    // Path to database.
    string db_path = 6;

    // Class of database.
    string db_class = 7;

    // Keyword arguments to pass to the database constructor.
    repeated KeyVal db_kwargs = 8;
}
